added public & pirvate key mechanism, google auth route
